--- a/src/cs/Common.props
+++ b/src/cs/Common.props
@@ -1,11 +1,9 @@
 <Project>
 
-    <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove('$(MSBuildProjectDirectory)', '.gitignore'))/ext/my-msbuild/My-MSBuild.props" />
-
     <!-- My-MSBuild settings -->
     <PropertyGroup>    
-		  <CodeAnalysisRuleSetFilePath>$(MSBuildThisFileDirectory)CodeAnalysis.ruleset</CodeAnalysisRuleSetFilePath>
-		  <StyleCopSettingsFilePath>$(MSBuildThisFileDirectory)StyleCop.json</StyleCopSettingsFilePath>
+		  <CodeAnalysisRuleSetFilePath>$(MSBuildThisFileDirectory)/CodeAnalysis.ruleset</CodeAnalysisRuleSetFilePath>
+		  <StyleCopSettingsFilePath>$(MSBuildThisFileDirectory)/StyleCop.json</StyleCopSettingsFilePath>
     </PropertyGroup>
 
     <!-- NuGet -->
