Works Theorafile `arm64`

--- a/src/cs/samples/video/Katabasis.Samples.Video.01-Playback/Katabasis.Samples.Video.01-Playback.csproj
+++ b/src/cs/samples/video/Katabasis.Samples.Video.01-Playback/Katabasis.Samples.Video.01-Playback.csproj
@@ -8,7 +8,7 @@
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>bottlenoselabs.Katabasis.Samples</RootNamespace>
-        <AssemblyName>Katabasis.Samples.Input.Mouse</AssemblyName>
+        <AssemblyName>Katabasis.Samples.Video.Playback</AssemblyName>
         <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
