--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,12 @@ jobs:
       with:
         versionSpec: '5.x'
 
+    - name: "Use GitVersion"
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v0.9.7
+
     - name: "Build solution"
-      run: dotnet build --nologo --configuration Release /p:Version='${{ GitVersion_NuGetVersionV2 }}'
+      run: dotnet build --nologo --configuration Release /p:Version='${{ steps.gitversion.outputs.nuGetVersionV2 }}"'
 
     - name: "Test solution"
       run: dotnet test --nologo --configuration Release --no-build
