--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,10 @@ jobs:
 
     steps:
     - name: "Checkout Git repository"
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         ref: ${{ env.GITHUB_REF }}
+        submodules: 'recursive'
 
     - name: "Fetch all history for all tags and branches"
       run: git fetch --prune --unshallow
