For Windows samples, reference C`.dll`files

--- a/src/cs/samples/Directory.Build.props
+++ b/src/cs/samples/Directory.Build.props
@@ -9,6 +9,14 @@
 
     <!-- Dynamic link libraries -->
     <ItemGroup>
+        <Content Include="$(MSBuildThisFileDirectory)../../../ext/katabasis-bedrock/lib/win-x64/*.dll">
+            <Link>%(Filename)%(Extension)</Link>
+            <PackagePath>runtimes/osx-x64/native/%(Filename)%(Extension)</PackagePath>
+            <Pack>true</Pack>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+    <ItemGroup>
         <Content Include="$(MSBuildThisFileDirectory)../../../ext/katabasis-bedrock/lib/osx/*.dylib">
             <Link>%(Filename)%(Extension)</Link>
             <PackagePath>runtimes/osx-x64/native/%(Filename)%(Extension)</PackagePath>
