Embed stock effects

--- a/src/cs/production/Katabasis.Framework/bottlenoselabs.Katabasis.Framework.props
+++ b/src/cs/production/Katabasis.Framework/bottlenoselabs.Katabasis.Framework.props
@@ -21,4 +21,17 @@
         </Compile>
     </ItemGroup>
 
+    <!-- Stock effects files emedded into assembly -->
+    <ItemGroup>
+        <EmbeddedResource Include="$(KatabasisFrameworkContentDirectoryPath)/Graphics/Effect/Sprite/SpriteEffect.fxb">
+            <LogicalName>bottlenoselabs.Katabasis.Graphics.Effect.SpriteEffect.fxb</LogicalName>
+        </EmbeddedResource>
+        <EmbeddedResource Include="$(KatabasisFrameworkContentDirectoryPath)/Graphics/Effect/YUVToRGBA/YUVToRGBAEffect.fxb" >
+            <LogicalName>bottlenoselabs.Katabasis.Graphics.Effect.YUVToRGBAEffect.fxb</LogicalName>
+        </EmbeddedResource>
+        <EmbeddedResource Include="$(KatabasisFrameworkContentDirectoryPath)/ImGui/Main.fxb">
+            <LogicalName>bottlenoselabs.Katabasis.ImGui.Main.fxb</LogicalName>
+        </EmbeddedResource>
+    </ItemGroup>
+
 </Project>
