Fix path for bedrock

--- a/src/cs/production/Katabasis.Bedrock.linux-x64/Katabasis.Bedrock.linux-x64.csproj
+++ b/src/cs/production/Katabasis.Bedrock.linux-x64/Katabasis.Bedrock.linux-x64.csproj
@@ -9,7 +9,7 @@
 
     <!-- Dynamic link libraries -->
     <ItemGroup>
-        <Content Include="$(GitRepositoryPath)/lib/linux-x64/*.so">
+        <Content Include="$(GitRepositoryPath)/ext/katabasis-bedrock/lib/linux-x64/*.so">
             <Link>%(Filename)%(Extension)</Link>
             <PackagePath>runtimes/linux-x64/native/%(Filename)%(Extension)</PackagePath>
             <Pack>true</Pack>
