--- a/src/cs/production/Katabasis.Bedrock.win-x64/Katabasis.Bedrock.win-x64.csproj
+++ b/src/cs/production/Katabasis.Bedrock.win-x64/Katabasis.Bedrock.win-x64.csproj
@@ -9,7 +9,7 @@
 
     <!-- Dynamic link libraries -->
     <ItemGroup>
-        <Content Include="$(GitRepositoryPath)/lib/win-x64/*.dll">
+        <Content Include="$(GitRepositoryPath)/ext/katabasis-bedrock/lib/win-x64/*.dll">
             <Link>%(Filename)%(Extension)</Link>
             <PackagePath>runtimes/win-x64/native/%(Filename)%(Extension)</PackagePath>
             <Pack>true</Pack>
