--- a/src/cs/production/Katabasis.Framework/bottlenoselabs.Katabasis.Framework.props
+++ b/src/cs/production/Katabasis.Framework/bottlenoselabs.Katabasis.Framework.props
@@ -28,7 +28,7 @@
             <Link>Properties/bottlenoselabs/Katabasis.Framework/Graphics/Effect/Sprite/SpriteEffect.fxb</Link>
         </EmbeddedResource>
         <EmbeddedResource Include="$(KatabasisFrameworkContentDirectoryPath)/Graphics/Effect/YUVToRGBA/YUVToRGBAEffect.fxb" >
-            <LogicalName>bottlenoselabs.Katabasis.Graphics.Effect.YUVToRGBAEffect.fxb</LogicalName>
+            <LogicalName>bottlenoselabs.Katabasis.Graphics.Effect.YUVToRGBA.YUVToRGBAEffect.fxb</LogicalName>
             <Link>Properties/bottlenoselabs/Katabasis.Framework/Graphics/Effect/YUVToRGBA/YUVToRGBAEffect.fxb</Link>
         </EmbeddedResource>
         <EmbeddedResource Include="$(KatabasisFrameworkContentDirectoryPath)/ImGui/Main.fxb">
