--- a/src/cs/samples/Directory.Build.props
+++ b/src/cs/samples/Directory.Build.props
@@ -15,6 +15,7 @@
             <PackagePath>runtimes/osx-x64/native/%(Filename)%(Extension)</PackagePath>
             <Pack>true</Pack>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Visible>false</Visible>
         </Content>
     </ItemGroup>
     <ItemGroup>
@@ -23,6 +24,7 @@
             <PackagePath>runtimes/osx-x64/native/%(Filename)%(Extension)</PackagePath>
             <Pack>true</Pack>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Visible>false</Visible>
         </Content>
     </ItemGroup>
 
