--- a/src/cs/production/Katabasis.Assetyard/Katabasis.Assetyard.csproj
+++ b/src/cs/production/Katabasis.Assetyard/Katabasis.Assetyard.csproj
@@ -14,6 +14,11 @@
 		<EnableAnalyzersStyleCop>true</EnableAnalyzersStyleCop>
 	</PropertyGroup>
 
+	<!-- NuGet -->
+	<PropertyGroup>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+
 	<!-- Project references -->
 	<ItemGroup>
 		<ProjectReference Include="..\Katabasis.Framework\Katabasis.Framework.csproj" />
