--- a/src/cs/production/Katabasis.Framework/Katabasis.Framework.csproj
+++ b/src/cs/production/Katabasis.Framework/Katabasis.Framework.csproj
@@ -15,7 +15,7 @@
 		<EnableAnalyzersStyleCop>true</EnableAnalyzersStyleCop>
 		<EnableCodeCoverage>false</EnableCodeCoverage>
 	</PropertyGroup>
-	
+
 	<!-- Project referneces -->
 
 	<!-- NuGet package references -->
@@ -28,8 +28,8 @@
 		<EmbeddedResource Include="Graphics/Effect/Sprite/SpriteEffect.fxb">
 			<LogicalName>bottlenoselabs.Katabasis.Graphics.Effect.Sprite.SpriteEffect.fxb</LogicalName>
 		</EmbeddedResource>
-		<EmbeddedResource Include="Graphics/Effect/YUVToRGBA/YUVToRGBAEffect.fxb" >
-			<LogicalName>bottlenoselabs.Katabasis.Graphics.Effect.YUVToRGBAEffect.fxb</LogicalName>
+		<EmbeddedResource Include="Graphics/Effect/YUVToRGBA/YUVToRGBAEffect.fxb">
+			<LogicalName>bottlenoselabs.Katabasis.Graphics.Effect.YUVToRGBA.YUVToRGBAEffect.fxb</LogicalName>
 		</EmbeddedResource>
 		<EmbeddedResource Include="ImGui/Main.fxb">
 			<LogicalName>bottlenoselabs.Katabasis.ImGui.Main.fxb</LogicalName>
@@ -62,15 +62,19 @@
 			<Link>Properties/bottlenoselabs/Katabasis.Bedrock/Theorafile/%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<Pack>false</Pack>
 		</Compile>
-		<Compile Include="$(GitRepositoryPath)/ext/katabasis-bedrock/ext/imgui-cs/imgui.cs">
+		<Compile Include="$(GitRepositoryPath)/ext/katabasis-bedrock/ext/imgui-cs/ImGui.cs">
 			<Link>Properties/bottlenoselabs/Katabasis.Bedrock/ImGui/%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<Pack>false</Pack>
 		</Compile>
+<!--		<Compile Include="$(GitRepositoryPath)/ext/katabasis-bedrock/ext/imgui-cs/src/cs/production/imgui/**/*.cs">-->
+<!--			<Link>Properties/bottlenoselabs/Katabasis.Bedrock/ImGui/%(RecursiveDir)%(Filename)%(Extension)</Link>-->
+<!--			<Pack>false</Pack>-->
+<!--		</Compile>-->
 	</ItemGroup>
 
 	<!-- NuGet -->
 	<PropertyGroup>
-		<IsPackable>true</IsPackable>
+		<IsPackable>false</IsPackable>
 		<RepositoryUrl>https://github.com/bottlenoselabs/katabasis</RepositoryUrl>
 		<PackageDescription>Katabasis: XNA re-imagined; Framework. Contains the C# code which is platform agnostic.</PackageDescription>
 		<SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
@@ -111,7 +115,7 @@
 			<Link>Properties/bottlenoselabs/Katabasis.Bedrock/ImGui/%(RecursiveDir)%(Filename)%(Extension)</Link>
 		</Content>
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<Content Include="$(MSBuildThisFileDirectory)/**/*.*">
 			<Pack>true</Pack>
